# PANRI

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: database_penyakitpadi.db  db_version  introduce_ads.html  introduce_ads_howto.html  introduce_ads_main.html  tos.spanf  whats_new  whats_new.html
app/src/main/assets/data_hama/: Gejala_burung.html  Gejala_keong_mas.html  HAMA okeee.doc  bakteri_daun_bergaris.html  blas.html  gejala_blas.html  gejala_daun_bergaris.html  gejala_hama_putih.html  gejala_hama_tikus.html  gejala_hama_walang_sangit.html  gejala_hawar_daun_bakteri.html  gejala_hawar_pelapah.html  gejala_kerdil_rumput.html  gejala_penggerek.html  gejala_wbc.html  hama_burung.html  hama_putih.html  hama_tikus.html  hama_walang_sangit.html  hawar_daun_bakteri.html  hawar_pelapah.html  keong_mas.html  kerdil_rumput.html  pengendalian_bdb.html  pengendalian_blas.html  pengendalian_hama_burung.html  pengendalian_hama_putih.html  pengendalian_hama_walang_sangit.html  pengendalian_hawa_tikus.html  pengendalian_hawar_daun_bakteri.html  pengendalian_hawar_pelapah.html  pengendalian_keong_mas.html  pengendalian_kerdil_rumput.html  pengendalian_penggerek_batang.html  pengendalian_wbc.html  penggerak_batang.html  wbc.html
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/drawable/: background_sect.xml  ic_btn_awal_blue.xml  ic_btn_blue.xml  ic_btn_mulai.xml  ic_btn_red.xml  indicator_selected_item_oval.xml  indicator_selected_item_oval_green.xml  indicator_unselected_item_oval.xml  petani.xml  viewpager_areas_content.xml
app/src/main/res/layout/: actabout_main.xml  actdiagnose_dialog_ask.xml  actdiagnose_dialog_whenpenyakitselected.xml  actdiagnose_maincontent.xml  actdiagnoseimg_main.xml  actgallery_main.xml  acthowto_main.xml  actinfo_main.xml  activity_main.xml  activity_main_section_largeimage.xml  actmain_content_op_incard.xml  actmain_dialog_on_exit.xml  actmain_fragment_viewpager.xml  actmain_instadds.xml  actmain_section_petani_desc.xml  actpreference_panrisettings.xml  actsplash_main.xml  acttutor_main.xml  acttutor_main_fragment_firstuse_1.xml  acttutor_main_fragment_firstuse_2.xml  acttutor_main_fragment_firstuse_3.xml  acttutor_main_fragment_firstuse_4.xml  adapter_aboutdev.xml  adapter_btnbawahdiag.xml  adapter_imagegridview.xml  adapter_imgdiagnose.xml  adapter_listpenyakitnamacontentview.xml  adapter_namapenyakit.xml  adapter_recycler.xml  app_bar_main.xml  cardview_adapter.xml  content_main.xml  dialog_layout.xml  dialog_layout_progress.xml  dialog_send_input_report.xml  dialog_show_dbupdate.xml  layout_onnotselected.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  (+2 more)
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-ldpi/: dimens.xml
app/src/main/res/values-mdpi/: dimens.xml
app/src/main/res/values-v21/: dimens.xml
app/src/main/res/values-xhdpi/: dimens.xml
app/src/main/res/values-xxhdpi/: dimens.xml
app/src/main/res/values-xxxhdpi/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
mylexzlibrary/: CMakeLists.txt  build.gradle
mylexzlibrary/src/androidTest/java/com/mylexz/utils/: ExampleInstrumentedTest.java
mylexzlibrary/src/main/: AndroidManifest.xml
mylexzlibrary/src/main/c/: com_mylexz_utils_NodeData.c  com_mylexz_utils_PrimitiveData.c  component.c  native-lib.c
mylexzlibrary/src/main/java/com/mylexz/utils/: CobaClass.java  DiskLruObjectCache.java  KeepString.java  Logger.java  MylexzActivity.java  NodeData.java  SimpleDiskLruCache.java  SystemBarTintManager.java  ZipUtility.java
mylexzlibrary/src/main/java/com/mylexz/utils/music/: SoundMediaBasicPlayer.java
mylexzlibrary/src/main/java/com/mylexz/utils/text/: TextSpanFormat.java
mylexzlibrary/src/main/java/com/mylexz/utils/text/style/: CenteredImageSpan.java  CustomTypefaceSpan.java
mylexzlibrary/src/main/res/layout/: act_linearbar.xml  activity_coba_text_span.xml  activity_main.xml
mylexzlibrary/src/main/res/values/: strings.xml
mylexzlibrary/src/test/java/com/mylexz/utils/: ExampleUnitTest.java
opencv/: build.gradle
(+243 files in other folders)
